# Q

./: README.md  package.json
src/: App.styles.ts  App.tsx  AttendanceManager.tsx  BonusManager.tsx  CalendarManager.tsx  CompanyManager.tsx  CustomItemManager.tsx  PaySlipManager.tsx  PayStubModal.tsx  StaffManager.tsx  calcSalary.ts  dbSchema.ts  useApp.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/constants/: salaryMaster2026.ts
src/features/attendance/: AttendanceManager.tsx  CalendarManager.tsx  PaidLeaveManager.tsx
src/features/auth/: FirstSetupScreen.styles.ts  FirstSetupScreen.tsx  LoginScreen.styles.ts  LoginScreen.tsx  useFirstSetup.ts  useLogin.ts
src/features/payroll/: BonusManager.tsx  PaySlipManager.styles.ts  PaySlipManager.tsx  PayStubModal.styles.ts  PayStubModal.tsx  usePaySlipManager.ts  usePayStubModal.ts
src/features/settings/: CompanyManager.tsx  CustomItemManager.styles.ts  CustomItemManager.tsx  StaffManager.tsx  SystemSettings.styles.ts  SystemSettings.tsx  UserManager.styles.ts  UserManager.tsx  useCustomItemManager.ts  useSystemSettings.ts  useUserManager.ts
src/styles/: styles.ts
src/types/: dbSchema.ts
src/utils/: addressUtils.ts  calcSalary.ts  csvUtils.ts  payrollUtils.ts  timeUtils.ts
