[package]
name = "q"
version = "0.1.1"
description = "Q Payroll App"
authors = ["you"]
edition = "2021"

[lib]
name = "q_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri関連
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2.5.8"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2"

# データ処理関連
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 🆕 パスワード暗号化（Argon2）関連
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
